2007-10-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Fixed "Bug
	  327062 - MD Search (Whole Words Only) is very slow".

2007-10-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: Fixed "Bug 330113 -
	  Clicking a line bookmark crashes md".

2007-10-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Changed calls
	  for the new StringParser.

2007-10-02  Grzegorz Sobański <silk@boktor.net>

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Use the
	  Ambience to render names for class and memebers combos in source 
	  editors.
	  
2007-10-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorWidget.cs: There is no need to
	  manually dispose the child view. It will be disposed when the parent is
	  destroyed.
	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: Removed old error
	  underlining code. Avoid leak caused by event subscription.
	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Don't try to show the
	  tooltip after the window has been disposed.
	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Destroy the
	  main widget when the view is disposed. Removed some old error
	  underlining code.

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Fixed "Bug
	  325519 - Unable to open web.config files from solution explorer".

2007-10-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Bug 328817 - New created
	  file use Tab with Convert Tab to spaces enabled

2007-10-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Fixed bug
	  330265 - Tab to spaces not used if indent type is none or automatic.

2007-10-02  Zach Lute <zach.lute@gmail.com>
